--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,11 @@ html {
     font-family: 'Poppins';
     scroll-behavior: smooth;
 }
+
 a {
     text-decoration: none;
 }
+
 .container {
     min-height: 100vh;
     width: 100%;
@@ -24,39 +26,46 @@ a {
     align-items: center;
     justify-content: center;
 }
+
 img {
     height: 100%;
     width: 100%;
     object-fit: cover;
 }
+
 p {
-    color: black;
+    color: #121212;
     font-size: 1.5rem;
     font-weight: 300;
     margin-top: 5px;
     line-height: 2.5rem;
     letter-spacing: 0.05rem;
 }
+
 .section-title {
     font-size: 4em;
     font-weight: 500;
-    color: black;
+    color: #121212;
     margin-top: 10px;
     text-transform: uppercase;
     letter-spacing: 0.2rem;
     text-align: center;
 }
+
 .section-title span {
     color: #007D51;
 }
+
 .brand h1 {
     font-size: 3rem;
     text-transform: uppercase;
-    color: white;
+    color: #f4fefe;
 }
+
 .brand h1 span {
     color: #007D51;
 }
+
 .brand .icon {
     width: 70px;
 }
@@ -72,19 +81,27 @@ p {
     width: 100vw;
     height: auto;
 }
+
 #header .header {
     min-height: 8vh;
     transition: 0.4s ease background-color;
+    margin: 0 auto;
+    padding: 0 50px;
 }
+
 #header .nav-bar {
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 100%;
     height: 100%;
-    max-width: 1300px;
-    padding: 0 10px;
+    max-width: 1200px;
 }
+
+#header .nav-bar .brand {
+    margin: 5px;
+}
+
 #header .nav-list ul {
     list-style: none;
     position: absolute;
@@ -101,45 +118,51 @@ p {
     overflow-x: hidden;
     transition: 0.5s ease left;
 }
+
 #header .nav-list ul.active {
     left: 0;
 }
+
 #header .nav-list ul a {
     font-size: 2.5rem;
     font-weight: 500;
     letter-spacing: 0.2rem;
     text-decoration: none;
-    color: white;
+    color: #f4fefe;
     display: block;
     padding: 20px;
     text-transform: uppercase;
 }
+
 #header .nav-list ul a::after {
     content: attr(Data-after);
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(0);
-    color: rgba(240, 248, 255, 0.021);
-    font-size: 7rem;
+    color: rgba(255, 255, 255, 0.153);
+    font-size: 5rem;
     letter-spacing: 50px;
     z-index: -1;
     transition: 0.3s ease letter-spacing;
 }
+
 #header .nav-list ul li:hover a::after {
     transform: translate(-50%, -50%) scale(1);
     letter-spacing: initial;
 }
+
 #header .nav-list ul li:hover a {
     color: #007D51;
 }
+
 #header .hamburger {
     width: 50px;
     height: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 3px solid white;
+    border: 3px solid #f4fefe;
     border-radius: 50%;
     position: relative;
     cursor: pointer;
@@ -147,22 +170,25 @@ p {
     transform: scale(0.8);
     margin-right: 20px;
 }
-#header .hamburger:after{
+
+#header .hamburger:after {
     content: '';
     position: absolute;
     width: 100%;
     height: 100%;
-    border: 3px solid white;
+    border: 3px solid #f4fefe;
     border-radius: 50%;
     animation: hamburger_puls 2s ease infinite;
 }
+
 #header .hamburger .bar {
     width: 30px;
     height: 2px;
     position: relative;
-    background-color: white;
+    background-color: #f4fefe;
     z-index: -1;
 }
+
 #header .hamburger .bar::after,
 #header .hamburger .bar::before {
     content: '';
@@ -170,19 +196,23 @@ p {
     width: 100%;
     height: 100%;
     left: 0;
-    background-color: white;
+    background-color: #f4fefe;
     transition: 0.3s ease;
     transition-property: top, bottom;
 }
+
 #header .hamburger .bar::after {
     top: 8px;
 }
-#header .hamburger.active .bar::after{
-    top : 0;
+
+#header .hamburger.active .bar::after {
+    top: 0;
 }
+
 #header .hamburger .bar::before {
     bottom: 8px;
 }
+
 #header .hamburger.active .bar::before {
     bottom: 0;
 }
@@ -198,6 +228,7 @@ p {
     position: relative;
     z-index: 1;
 }
+
 #top-page::after {
     content: '';
     position: absolute;
@@ -209,12 +240,14 @@ p {
     opacity: 0.7;
     z-index: -1;
 }
+
 #top-page .top-page {
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 50px;
     justify-content: flex-start;
 }
+
 #top-page h1 {
     display: block;
     width: fit-content;
@@ -224,13 +257,16 @@ p {
     animation: text_reveal 0.5s ease forwards;
     animation-delay: 1s;
 }
+
 #top-page h1:nth-child(1) {
     animation-delay: 1s;
 }
+
 #top-page h1:nth-child(2) {
     animation-delay: 2s;
 }
-#top-page h1 span{
+
+#top-page h1 span {
     position: absolute;
     top: 0;
     left: 0;
@@ -240,16 +276,19 @@ p {
     animation: text_reveal_box 1s ease;
     animation-delay: 0.5s;
 }
+
 #top-page h1:nth-child(1) span {
     animation-delay: 0.5s;
 }
+
 #top-page h1:nth-child(2) span {
     animation-delay: 1.5s;
 }
+
 #top-page .cta {
     display: inline-block;
     padding: 10px 30px;
-    color: white;
+    color: #f4fefe;
     background-color: transparent;
     border: 2px solid #007D51;
     font-size: 2rem;
@@ -258,8 +297,9 @@ p {
     margin-top: 10px;
     transition: 0.3s ease background-color;
 }
+
 #top-page .cta:hover {
-    color: white;
+    color: #f4fefe;
     background-color: #007D51;
 }
 
@@ -273,10 +313,12 @@ p {
     margin: 0 auto;
     padding: 100px 0;
 }
+
 #about .about-top {
     max-width: 80%;
     margin: 0 auto;
 }
+
 #about .about-bottom {
     display: flex;
     align-items: center;
@@ -284,11 +326,13 @@ p {
     flex-wrap: wrap;
     margin-top: 50px;
 }
+
 #about .about-bottom .icon {
     height: 80px;
     width: 80px;
     margin-bottom: 20px;
 }
+
 #about .about-item {
     display: flex;
     height: 450px;
@@ -300,11 +344,12 @@ p {
     border-radius: 10px;
     background-image: url('../img/about.png');
     background-size: cover;
-    margin: 10px 5%;
+    margin: 20px 5%;
     position: relative;
     z-index: 1;
     overflow: hidden;
 }
+
 #about .about-item::after {
     content: '';
     position: absolute;
@@ -316,13 +361,15 @@ p {
     opacity: 0.7;
     z-index: -1;
 }
+
 #about .about-item h2 {
     font-size: 2rem;
-    color: white;
+    color: #f4fefe;
     margin-bottom: 10px;
 }
+
 #about .about-item p {
-    color: white;
+    color: #f4fefe;
     text-align: left;
 }
 
@@ -335,15 +382,18 @@ p {
     margin: 0 auto;
     padding: 100px 0;
 }
+
 #projects .projects-header h1 {
     margin-bottom: 50px;
 }
+
 #projects .all-projects {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
 }
+
 #projects .project-item {
     display: flex;
     align-items: center;
@@ -354,6 +404,7 @@ p {
     overflow: hidden;
     border-radius: 10px;
 }
+
 #projects .project-info {
     padding: 30px;
     flex-basis: 50%;
@@ -363,28 +414,39 @@ p {
     justify-content: center;
     flex-direction: column;
     background-image: linear-gradient(60deg, #121212 0%, #007D51 100%);
-    color: white;
+    color: #f4fefe;
 }
+
 #projects .project-info h1 {
     font-size: 4rem;
     font-weight: 500;
 }
+
 #projects .project-info h2 {
     font-size: 1.8rem;
     font-weight: 500;
     margin-top: 10px;
 }
+
 #projects .project-info p {
-    color: white;
+    color: #f4fefe;
 }
+
+#projects .project-info a {
+    color: #f4fefe;
+    font-style: italic;
+}
+
 #projects .project-img {
     flex-basis: 50%;
     height: 300px;
     overflow: hidden;
 }
+
 #projects .project-img img {
     transition: 0.3s ease transform;
 }
+
 #projects .project-item:hover .project-img img {
     transform: scale(1.1);
 }
@@ -398,6 +460,7 @@ p {
     margin: 0 auto;
     padding: 100px 0;
 }
+
 #contact .all-contacts {
     width: 400px;
     display: flex;
@@ -406,36 +469,41 @@ p {
     flex-direction: column;
     margin-top: 50px;
 }
+
 #contact .contact-item {
     width: 80%;
     text-align: center;
     border-radius: 10px;
     padding: 30px;
-    margin: 30px;
+    margin: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    box-shadow: 0px 0px 18px 0 black; 
-    transition: 0.3s ease box-shadow;   
+    box-shadow: 0px 0px 18px 0 #121212;
+    transition: 0.3s ease box-shadow;
 }
-#contact .contact-item:hover {
-    box-shadow: 0px 0px 5px 0 black;  
-}
+
 #contact .contact-item a {
-    text-decoration: none;
-    color: black;
+    color: #121212;
 }
+
+#contact .contact-item:hover {
+    box-shadow: 0px 0px 5px 0 #121212;
+}
+
 #contact .icon {
     width: 70px;
     margin: 0 auto;
     margin-bottom: 10px;
 }
+
 #contact .contact-info h1 {
     font-size: 2.5rem;
     font-weight: 500;
     margin-bottom: 5px;
 }
+
 #contact .contact-info h2 {
     font-size: 1.3rem;
     font-weight: 500;
@@ -446,30 +514,32 @@ p {
 
 #footer .footer {
     background-image: linear-gradient(60deg, #121212 0%, #007D51 100%);
-    min-height: 200px;
-    padding-top: 50px;
-    padding-bottom: 20px;
+    min-height: 150px;
     flex-direction: column;
 }
+
 #footer .brand {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: row;
 }
+
 #footer .brand .icon {
     margin-right: 10px;
 }
+
 #footer .footer h2 {
     color: white;
     font-size: 1.8rem;
     font-weight: 500;
     letter-spacing: 0.1rem;
     margin-top: 10px;
-    margin-bottom: 50px;
+    margin-bottom: 40px;
 }
+
 #footer .footer p {
-    color: white;
+    color: #f4fefe;
     font-size: 1.3rem;
 }
 
@@ -481,24 +551,28 @@ p {
         opacity: 1;
         transform: scale(1);
     }
+
     100% {
         opacity: 0;
         transform: scale(1.4);
     }
 }
+
 @keyframes text_reveal_box {
     50% {
         width: 100%;
         left: 0;
     }
+
     100% {
         width: 0%;
         left: 100%;
     }
 }
+
 @keyframes text_reveal {
     100% {
-        color: white;
+        color: #f4fefe;
     }
 }
 
@@ -510,16 +584,20 @@ p {
         font-size: 2.5rem;
         padding: 20px 60px;
     }
+
     h1.section-title {
         font-size: 4rem;
     }
+
     #top-page h1 {
         font-size: 5rem;
     }
+
     #about .about-bottom .about-item {
         flex-basis: 45%;
         margin: 2.5%;
     }
+
     #projects .project-item {
         height: 400px;
         margin: 0;
@@ -527,15 +605,19 @@ p {
         border-radius: 0;
         flex-direction: row;
     }
+
     #projects .project-item:nth-child(even) {
         flex-direction: row-reverse;
     }
+
     #projects .all-projects .project-info {
         height: 100%;
     }
+
     #projects .all-projects .project-img {
         height: 100%;
     }
+
     #contact .contact {
         flex-direction: column;
         padding: 100px 0;
@@ -543,38 +625,42 @@ p {
         justify-content: center;
         min-height: 20vh;
     }
+
     #contact .all-contacts {
         width: 100%;
         display: flex;
-        flex-direction: row;
         justify-content: space-evenly;
-        margin: 0;
+        flex-direction: row;
+        margin-top: 50px;
     }
+
     #contact .contact-item {
         width: 30%;
         margin: 0;
         flex-direction: row;
     }
+
     #contact .contact-item .icon {
         width: 100px;
         height: 100px;
     }
+
     #contact .contact-item .icon img {
         object-fit: contain;
-    }
-    #contact .contact-item .contact-info {
-        width: 100%;
-        text-align: left;
-        padding-left: 20px;
     }
 }
 
 /* Media Query for desktop */
 
 @media only screen and (min-width: 1200px) {
+    #header .nav-bar .brand {
+        margin-left: 45px;
+    }
+    
     #header .hamburger {
         display: none;
     }
+
     #header .nav-list ul {
         position: initial;
         display: block;
@@ -582,17 +668,26 @@ p {
         height: auto;
         background-color: transparent;
     }
+
     #header .nav-list ul li {
         display: inline-block;
     }
+
     #header .nav-list ul a {
         font-size: 1.8rem;
     }
+
     #header .nav-list ul a:after {
         display: none;
     }
+
     #about .about-bottom .about-item {
         flex-basis: 22%;
         margin: 1.5%;
+        height: 550px;
+    }
+
+    #projects .projects {
+        max-width: 100%;
     }
 }
