--- a/css/style.css
+++ b/css/style.css
@@ -338,7 +338,7 @@ p {
     height: 450px;
     flex-basis: 80%;
     align-items: flex-start;
-    justify-content: center;
+    justify-content: flex-start;
     flex-direction: column;
     padding: 30px;
     border-radius: 10px;
